objects/alm_pm2__VC_Commit__c.object
<CustomObject>
 <fullName>alm_pm2__VC_Commit__c</fullName>
 <fields>
  <fullName>alm_pm2__Backlog_Components__c</fullName>
  <label>Backlog Components</label>
  <length>131072</length>
  <type>LongTextArea</type>
 </fields>
 <fields>
  <fullName>alm_pm2__Backlog_Item__c</fullName>
  <deleteConstraint>SetNull</deleteConstraint>
  <label>Backlog Item</label>
  <referenceTo>alm_pm2__Backlog__c</referenceTo>
  <relationshipLabel>Commit History</relationshipLabel>
  <relationshipName>VC_Commits</relationshipName>
  <type>Lookup</type>
 </fields>
 <fields>
  <fullName>alm_pm2__Branch_Name__c</fullName>
  <label>Branch Name</label>
  <length>255</length>
  <type>Text</type>
 </fields>
 <fields>
  <fullName>alm_pm2__Commit_Message__c</fullName>
  <label>Commit Message</label>
  <length>32000</length>
  <type>LongTextArea</type>
 </fields>
 <fields>
  <fullName>alm_pm2__Commit_Owner__c</fullName>
  <label>Commit Owner</label>
  <length>255</length>
  <type>Text</type>
 </fields>
 <fields>
  <fullName>alm_pm2__External_Commit_Id__c</fullName>
  <caseSensitive>true</caseSensitive>
  <externalId>true</externalId>
  <label>External Commit Id</label>
  <length>255</length>
  <type>Text</type>
  <unique>true</unique>
 </fields>
 <fields>
  <fullName>alm_pm2__External_Commit_URL__c</fullName>
  <formula>CASE(LOWER(TEXT(alm_pm2__VC_Repository__r.alm_pm2__Host__c)),
'github',
HYPERLINK("https://github.com/" + alm_pm2__VC_Repository__r.alm_pm2__Organization_Name__c +  "/" + alm_pm2__VC_Repository__r.Name + "/commit/" + alm_pm2__External_Commit_Id__c, alm_pm2__External_Commit_Id__c),
"bitbucket",
HYPERLINK("https://bitbucket.org/" + alm_pm2__VC_Repository__r.alm_pm2__Organization_Name__c +  "/" + alm_pm2__VC_Repository__r.Name + "/commits/" + alm_pm2__External_Commit_Id__c, alm_pm2__External_Commit_Id__c),
'')</formula>
  <label>External Commit URL</label>
  <type>Text</type>
 </fields>
 <fields>
  <fullName>alm_pm2__Response_Message__c</fullName>
  <label>Response Message</label>
  <type>TextArea</type>
 </fields>
 <fields>
  <fullName>alm_pm2__Source_Instance__c</fullName>
  <deleteConstraint>SetNull</deleteConstraint>
  <label>Source Instance</label>
  <referenceTo>alm_pm2__Instances__c</referenceTo>
  <relationshipLabel>VC Commits</relationshipLabel>
  <relationshipName>VC_Commits</relationshipName>
  <type>Lookup</type>
 </fields>
 <fields>
  <fullName>alm_pm2__Status__c</fullName>
  <label>Status</label>
  <type>Picklist</type>
  <valueSet>
   <restricted>true</restricted>
   <valueSetDefinition>
    <value>
     <fullName>Pending</fullName>
    </value>
    <value>
     <fullName>In Progress</fullName>
    </value>
    <value>
     <fullName>Success</fullName>
    </value>
    <value>
     <fullName>Failed</fullName>
    </value>
    <value>
     <fullName>Failure</fullName>
     <isActive>false</isActive>
     <label>Failure</label>
    </value>
   </valueSetDefinition>
  </valueSet>
 </fields>
 <fields>
  <fullName>alm_pm2__UUID__c</fullName>
  <externalId>true</externalId>
  <label>UUID</label>
  <length>255</length>
  <type>Text</type>
 </fields>
 <fields>
  <fullName>alm_pm2__VC_Repository__c</fullName>
  <deleteConstraint>SetNull</deleteConstraint>
  <label>Repository</label>
  <referenceTo>alm_pm2__VC_Repository__c</referenceTo>
  <relationshipLabel>VC Commits</relationshipLabel>
  <relationshipName>VC_Commits</relationshipName>
  <type>Lookup</type>
 </fields>
 <label>VC Commit</label>
 <nameField>
  <displayFormat>VC-{00000}</displayFormat>
  <label>VC Commit Name</label>
  <type>AutoNumber</type>
 </nameField>
 <pluralLabel>VC Commits</pluralLabel>
 <sharingModel>ReadWrite</sharingModel>
</CustomObject>